# tabc-scrape

./: .replit  Dockerfile  README.md  Recommended Upgrades.txt  alertmanager.yml  dev_tabc_restaurants.db  docker-compose.yml  enriched_data.csv  enriched_restaurants.csv  inspect_database.py  prometheus.yml  pyproject.toml  replit_app.py  requirements.txt  run_enrichment.py  setup.py  tabc-api-key.txt  tabc-tokens.txt  tabc_restaurants.db  test_1000_records.py  test_api.py  test_api_connection.py  test_api_improved.py  test_async_api.py  test_caching.py  test_complete_enrichment_pipeline.py  test_debug.py  test_enhanced_concept_classification.py  test_enrichment_pipeline.py  test_population_analysis.py  test_real_data_integration.py  test_restaurants.db  test_square_footage_scraper.py
grafana/dashboards/: api-performance.json  data-pipeline.json  data-quality.json  error-tracking.json  system-overview.json
src/: dev_tabc_restaurants.db  tabc_restaurants.db
src/tabc_scrape/: __init__.py  cli.py  config.py  config_dev.py  config_prod.py  config_staging.py  web.py  workflow.py
src/tabc_scrape.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tabc_scrape/analysis/: __init__.py  population.py
src/tabc_scrape/data/: __init__.py  api_client.py  tabc_field_definitions.txt
src/tabc_scrape/scraping/: __init__.py  concept_classifier.py  square_footage.py
src/tabc_scrape/storage/: __init__.py  cache.py  database.py  enrichment_pipeline.py  models.py  validation_framework.py
