[tool.poetry]
name = "tabc-scraper"
version = "1.0.0"
description = "TABC Restaurant Data Scraper"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.0"
flask = "^3.0.0"
pandas = "^2.0.0"
sqlalchemy = "^2.0.0"
aiohttp = "^3.9.0"
beautifulsoup4 = "^4.12.0"
pydantic = "^2.0.0"
prometheus-client = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"